--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="17"
         android:targetSdkVersion="19" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -22,6 +23,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        	 <activity android:name="com.swqs.schooltrade.LoginActivity" >
+        </activity>
+        <activity android:name="com.swqs.schooltrade.RegisterActivity">
+            
+        </activity>
+        <activity android:name="com.swqs.schooltrade.HomeActivity"></activity>
+        
+         <activity android:name="com.swqs.schooltrade.PasswordRecoverActivity"></activity>
     </application>
 
 </manifest>
