--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<<<<<<< HEAD
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.swqs.schooltrade"
     android:versionCode="1"
@@ -32,38 +31,11 @@
         <activity android:name="com.swqs.schooltrade.HomeActivity"></activity>
         
          <activity android:name="com.swqs.schooltrade.PasswordRecoverActivity"></activity>
+         <activity android:name="com.swqs.schooltrade.Money"></activity>
+         <activity android:name="com.swqs.schooltrade.Jump"></activity>
+         <activity android:name="com.swqs.schooltrade.MyCollection"></activity> 
+         <activity android:name="com.swqs.schooltrade.MyCredit"></activity>
+         <activity android:name="com.swqs.schooltrade.Recharge"></activity>
     </application>
 
 </manifest>
-=======
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.swqs.schooltrade"
-    android:versionCode="1"
-    android:versionName="1.0" >
-
-    <uses-sdk
-        android:minSdkVersion="17"
-        android:targetSdkVersion="19" />
-
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-        </activity>
-        
-        <activity android:name="com.swqs.schooltrade.NewGoodsActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        
-    </application>
-
-</manifest>
->>>>>>> branch 'master' of https://github.com/DGUT-Asiasoft-2013/SWQS_CLIENT.git
