--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -185,6 +185,10 @@
         <activity android:name="cn.jmessage.android.uikit.chatting.BrowserViewPagerActivity"></activity>
         <activity android:name="cn.jmessage.android.uikit.chatting.PickPictureTotalActivity"></activity>
         <activity android:name="cn.jmessage.android.uikit.chatting.PickPictureActivity"></activity>
+         <activity android:name="cn.jmessage.android.uikit.multiselectphotos.AlbumListActivity"/>
+        <activity android:name="cn.jmessage.android.uikit.multiselectphotos.BrowserViewPagerActivity" />
+        <activity android:name="cn.jmessage.android.uikit.multiselectphotos.PickPictureActivity" />
+        <activity android:name="cn.jmessage.android.uikit.multiselectphotos.BrowserPhotoPagerActivity"></activity>
     </application>
 
 </manifest>
