--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../../cloudage/Desktop/android workspace/MultiPhoto
+android.library.reference.1=../MultiPhoto
