美化个人信息界面，修改个人资料等

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -188,6 +188,7 @@
          <activity android:name="cn.jmessage.android.uikit.multiselectphotos.AlbumListActivity"/>
         <activity android:name="cn.jmessage.android.uikit.multiselectphotos.BrowserViewPagerActivity" />
         <activity android:name="cn.jmessage.android.uikit.multiselectphotos.PickPictureActivity" />
+        <activity android:name="com.swqs.schooltrade.activity.EditPersonInfoActivity"></activity>
         <activity android:name="cn.jmessage.android.uikit.multiselectphotos.BrowserPhotoPagerActivity"></activity>
     </application>
 
