--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="17"
+        android:minSdkVersion="16"
         android:targetSdkVersion="19" />
 
     <permission
@@ -50,9 +50,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.swqs.schooltrade.activity.LoginActivity" >
+        <activity android:name="com.swqs.schooltrade.activity.LoginActivity" 
+            android:windowSoftInputMode="stateHidden|adjustResize">
         </activity>
-        <activity android:name="com.swqs.schooltrade.activity.RegisterActivity" >
+        <activity android:name="com.swqs.schooltrade.activity.RegisterActivity" 
+            android:windowSoftInputMode="stateHidden|adjustResize"
+            >
         </activity>
 
         <activity android:name="com.swqs.schooltrade.activity.HomeActivity" >
