评论显示楼层，对评论进行评论

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -258,6 +258,10 @@
             android:name="cn.jmessage.android.uikit.multiselectphotos.BrowserPhotoPagerActivity"
             android:screenOrientation="portrait" >
         </activity>
+        <activity
+            android:name="com.swqs.schooltrade.activity.CommentToOthersActivity"
+            android:screenOrientation="portrait" >
+        </activity>
 
         <receiver
             android:name="com.swqs.schooltrade.receiver.MyReceiver"
