评价商品，查看评价等

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -262,6 +262,10 @@
             android:name="com.swqs.schooltrade.activity.CommentToOthersActivity"
             android:screenOrientation="portrait" >
         </activity>
+        <activity
+            android:name="com.swqs.schooltrade.activity.AddEvaluationActivity"
+            android:screenOrientation="portrait" >
+        </activity>
 
         <receiver
             android:name="com.swqs.schooltrade.receiver.MyReceiver"
